--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     grid-template-rows: 100px 1fr;
     gap: 10px;
     padding-top: 20px;
+    margin: -10px;
 }
 
 .first-one {
@@ -17,7 +18,7 @@
 
 .second-one {
     display: flex;
-    padding-left: 20%;
+    padding-left: 120px;
 }
 
 .second-item, 
@@ -55,16 +56,18 @@
 button {
     border-radius: 5px;
     text-align: center;
+    padding: 5px 25px;
 }
 
 button:active {
     background-color: #3882F6;
     color: white;
+    border: 2px solid #E5E7EB;
+
 }
 
 .button-one{
-    padding: 5px 25px;
-    border: #1F2937;
+    border: 2px solid #1F2937;
 }
 
 .second-two {
@@ -81,4 +84,52 @@ button:active {
     text-align: center;
     margin-top: -1px;
     width: auto;
+    margin-top: 5px;
+}
+
+.images {
+    border: 5px solid #3882F6;
+    border-radius: 10px;
+}
+
+.three {
+    background-color: #E5E7EB;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+    text-align: justify;
+    padding: 90px 0px;
+    margin: 90px -10px;
+}
+
+.four {
+    color: white;
+    display: flex;
+    background-color: #3882F6;
+    justify-content: center;
+    align-items: center;
+    margin: 100px 200px;
+    border-radius: 5px;
+    padding: 20px;
+}
+
+.first-four,
+.second-four {
+    flex: auto;
+}
+
+.first-four {
+    margin-left: 100px;
+}
+
+footer {
+    background-color: #1F2937;
+    color: #F9FAF8;
+    text-align: center;
+    padding: 30px;
+    margin: -10px;
+}
+
+.button-two {
+    border: 2px solid white;
 }
